Fix: Dark mode button appearence Dark mode button beside log buttons when user is not logged in yet.

--- a/client/src/components/layout/navbar/navbar.scss
+++ b/client/src/components/layout/navbar/navbar.scss
@@ -6,6 +6,12 @@
     }
   }
 
+  .log-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   .log-buttons .btn {
     margin: 0 .5rem;
     width: 75px;
